--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -1,52 +1,118 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 * {
-    margin: 0;
-    padding: 0;
     font-family: 'Roboto', 'Arial', sans-serif;
+    box-sizing: border-box;
 }
 body {
-    background-image: url('trees.png');
-    background-repeat: repeat;
+    background-image: url('/static/img/trees.png');
 }
-
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+.form-group {
+    margin-bottom: 0;
+}
 .wrapper {
-    max-width: 960px;
+    max-width: 1000px;
     margin: 0 auto;
-    height: inherit;
+    padding: 0 20px;
 }
 .header {
     background-color: rgba(255,255,255,0.8);
-    height: 65px;
     position: fixed;
     top: 0;
     width: 100%;
     border-bottom: solid 1px #eaeaea;
     z-index: 500;
     color: #AEAEAE;
-    font-weight: 300;
+    padding: 14px 0;
 }
-.header .row {
-    margin: auto;
-    height: inherit;
-}
-.logo {
+.header h1 {
     font-size: 150%;
+    font-weight: 300;
+    margin-bottom: 0;
 }
-.main {
-    background-color: rgba(255,255,255,0.8);
-    padding: 50px;
+#github-link {
+    height: 40px;
+}
+.content {
     margin-top: 150px;
-    border-radius: 15px;
 }
-.main input, .main button {
+
+.content-card {
+    background-color: rgba(255,255,255,0.8);
+    border-radius: 15px;
+    padding: 50px 50px;
+    margin-bottom: 40px;
+}
+#main-form input, #main-form button {
     height: 60px;
 }
-.main button {
-    min-width: 25%;
-}
-.form-row .col {
-    margin-left: 15px;
-}
 .history {
-    background-color: gainsboro;
+    color:#495057;
+}
+.history a {
+    color: #0236b9;
+}
+.history a:hover {
+    text-decoration: none;
+}
+.history h3 {
+    font-size: 150%;
+    font-weight: 300;
+}
+.list-group-item {
+    display: flex;
+    justify-content: space-between;
+}
+.list-group-item span {
+    align-self: center;
+}
+.list-group-item div {
+    display: flex;
+}
+.action-url {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+}
+
+@media screen and (min-width: 800px) {
+    .slug-group {
+        width: 70%;
+        margin-right: 20px;
+    }
+    #shorten-button {
+        width: calc(30% - 20px);
+        margin-top: 0 !important;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .slug-group {
+        width: 100%;
+    }
+    .content-card {
+        padding: 40px 20px;
+        margin: 20px 0;
+    }
+    .content {
+        margin-top: 90px;
+    }
+    .list-group-item {
+        flex-direction: column;
+    }
+    .list-group-item span {
+        margin-right: 0 !important;
+        margin-bottom: 1rem;
+    }
+    .list-group-item div {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .list-group-item .btn {
+        width: 100%;
+    }
 }
