--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -25,7 +25,7 @@ body {
     width: 100%;
     border-bottom: solid 1px #eaeaea;
     z-index: 500;
-    color: #AEAEAE;
+    color: #6C757D;
     padding: 14px 0;
 }
 .header h1 {
