--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -15,7 +15,7 @@
       <div class="wrapper">
         <div class="row justify-content-between align-items-center">
           <h1>Simple url shortener</h1>
-          <a href="https://github.com/rrrrs09/url_shortener">
+          <a href="https://github.com/rrrrs09/url_shortener" target="_blank">
             <img id="github-link" src="/static/img/github.png" alt="" >
           </a>
         </div>
@@ -27,28 +27,28 @@
           <form id="main-form">
             <div class="form-group mb-4">
               <input  id="long-url"
-                      v-on:input="urlError=null"
+                      v-on:input="resetErrors"
                       v-model="longUrl"
                       type="text"
                       class="form-control"
-                      :class="{ 'is-invalid': urlError }"
+                      :class="{ 'is-invalid': errors.url.length != 0 }"
                       placeholder="Вставьте ссылку, которую хотите укоротить">
               <div class="invalid-feedback">
-                {{ urlError }}
+                <p v-for="error in errors.url">{{ error }}</p>
               </div>
             </div>
             <div class="form-group row">
               <div class="slug-group">
                 <input  id="slug"
-                        v-on:input="slugError=null"
+                        v-on:input="resetErrors"
                         v-model="slug"
                         type="text"
                         class="form-control"
-                        :class="{ 'is-invalid': slugError }"
+                        :class="{ 'is-invalid':  errors.slug.length != 0 }"
                         placeholder="Вы можете использовать своё название для ссылки">
 
                 <div class="invalid-feedback">
-                  {{ slugError }}
+                  <p v-for="error in errors.slug">{{ error }}</p>
                 </div>
               </div>
               <button id="shorten-button"
@@ -61,7 +61,7 @@
           </form>
         </div>
 
-        <div class="content-card">
+        <div v-if="actionHistory.length != 0" class="content-card">
           <div class="history">
             <h3 class="text-center mb-3">История действий</h3>
             <ul class="list-group" v-if="actionHistory">
